--- a/package.json
+++ b/package.json
@@ -24,10 +24,15 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.1.0",
     "@nestjs/mapped-types": "*",
+    "@nestjs/passport": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.0",
     "@types/bcryptjs": "^2.4.2",
+    "@types/passport-jwt": "^3.0.9",
     "bcryptjs": "^2.4.3",
+    "express-session": "^1.17.3",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
     "pg": "^8.11.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
